// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render for 0 or 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense totalling 
    $2.30
  </h1>
</div>
`;

exports[`render for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     expenses totalling 
    $4.30
  </h1>
</div>
`;
